<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Literales -->
    <string name="app_name">SimpleChat</string>
    <string name="messages">Mensajes:</string>
    <string name="sendMessage">Enviar</string>
    <string name="getMessage">Recibir</string>
	<string name="username">Nombre:</string>
	<string name="setUserName">Introduzca usuario</string>
	<string name="setPassword">Introduzca contraseña</string>
	<string name="loggedUser">Usuario logado:</string>    
    <string name="password">Contraseña:</string>
    <string name="login">Login</string>
    <string name="cleanButton">Limpiar</string>
    <string name="userSays">dice:</string>
    
    
    <!-- Mensajes de alerta -->
    <string name="alertSetUser">Por favor, Introduzca Usuario</string>
    <string name="alertSetMessage">No ha introducido ningún mensaje</string>
    <string name="alertSetPassword">Atención: No ha introducido la contraseña</string>

</resources>