<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChatActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp" >

        <TextView
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dip"
            android:text="@string/loggedUser" />

        <TextView
            android:id="@+id/loggedUserEditText"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/messages" />

<!--     <EditText -->
<!--         android:id="@+id/messageHistory" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="fill_parent" -->
<!--         android:layout_weight="1" -->
<!--         android:clickable="true" -->
<!--         android:editable="false" -->
<!--         android:gravity="top" -->
<!--         android:scrollbarSize="10px" -->
<!--         android:scrollbars="vertical" /> -->

    <ListView
        android:id="@+id/messageHistory"
        android:layout_width="fill_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:layout_height="380dp" >

    </ListView>
    
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="158dp"
            android:layout_height="fill_parent"
            android:gravity="top" />

        <Button
            android:id="@+id/getMessageButton"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:onClick="sendChat_Onclick"
            android:text="@string/sendMessage" />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:onClick="getChat_Onclick"
            android:text="@string/getMessage" />

    </LinearLayout>

</LinearLayout>